Update calculator with new text and formatting

--- a/oximeterfin/Finalbiaswebsite.html
+++ b/oximeterfin/Finalbiaswebsite.html
@@ -213,9 +213,9 @@
         <div id="page4" class="page">
             <div class="content">
                 <h1>Your Risk</h1>
-                <p id="risk-text" style="text-align: center;">People with your background have a <span id="error-rate">--</span>% chance of getting an error for any given oximeter reading.</p>
+                <p id="risk-text" style="text-align: center;">People with your background experience an error of <span id="error-rate">--</span>% for any given oximeter reading.</p>
                 
-                <h2>Given below are the error rates for people from other racial demographics</h2>
+                <h2>Given below are the average error rates for people from different  racial demographics</h2>
                 <div id="chart-container">
                     <canvas id="errorChart"></canvas>
                 </div>
